@@ -858,6 +858,88 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+comment|// solr.xml node constants
+DECL|field|CORE_NAME
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_NAME
+init|=
+literal|"name"
+decl_stmt|;
+DECL|field|CORE_CONFIG
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_CONFIG
+init|=
+literal|"config"
+decl_stmt|;
+DECL|field|CORE_INSTDIR
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_INSTDIR
+init|=
+literal|"instanceDir"
+decl_stmt|;
+DECL|field|CORE_DATADIR
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_DATADIR
+init|=
+literal|"dataDir"
+decl_stmt|;
+DECL|field|CORE_SCHEMA
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_SCHEMA
+init|=
+literal|"schema"
+decl_stmt|;
+DECL|field|CORE_SHARD
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_SHARD
+init|=
+literal|"shard"
+decl_stmt|;
+DECL|field|CORE_COLLECTION
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_COLLECTION
+init|=
+literal|"collection"
+decl_stmt|;
+DECL|field|CORE_ROLES
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_ROLES
+init|=
+literal|"roles"
+decl_stmt|;
+DECL|field|CORE_PROPERTIES
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_PROPERTIES
+init|=
+literal|"properties"
+decl_stmt|;
 DECL|field|cores
 specifier|protected
 specifier|final
@@ -2840,7 +2922,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"name"
+name|CORE_NAME
 argument_list|,
 literal|null
 argument_list|)
@@ -2887,7 +2969,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"instanceDir"
+name|CORE_INSTDIR
 argument_list|,
 literal|null
 argument_list|)
@@ -2903,7 +2985,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"config"
+name|CORE_CONFIG
 argument_list|,
 literal|null
 argument_list|)
@@ -2931,7 +3013,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"schema"
+name|CORE_SCHEMA
 argument_list|,
 literal|null
 argument_list|)
@@ -2966,7 +3048,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"shard"
+name|CORE_SHARD
 argument_list|,
 literal|null
 argument_list|)
@@ -3004,7 +3086,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"collection"
+name|CORE_COLLECTION
 argument_list|,
 literal|null
 argument_list|)
@@ -3035,7 +3117,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"roles"
+name|CORE_ROLES
 argument_list|,
 literal|null
 argument_list|)
@@ -3067,7 +3149,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"properties"
+name|CORE_PROPERTIES
 argument_list|,
 literal|null
 argument_list|)
@@ -3095,9 +3177,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-name|CoreAdminParams
-operator|.
-name|DATA_DIR
+name|CORE_DATADIR
 argument_list|,
 literal|null
 argument_list|)
@@ -6320,7 +6400,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"name"
+name|CORE_NAME
 argument_list|,
 literal|null
 argument_list|)
@@ -6402,7 +6482,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"name"
+name|CORE_NAME
 argument_list|,
 literal|null
 argument_list|)
@@ -6455,7 +6535,7 @@ name|coreAttribs
 operator|.
 name|put
 argument_list|(
-literal|"name"
+name|CORE_NAME
 argument_list|,
 name|coreName
 argument_list|)
@@ -6474,7 +6554,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"instanceDir"
+name|CORE_INSTDIR
 argument_list|,
 name|instanceDir
 argument_list|,
@@ -6496,7 +6576,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"conf"
+name|CORE_CONFIG
 argument_list|,
 name|configName
 argument_list|,
@@ -6521,7 +6601,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"schema"
+name|CORE_SCHEMA
 argument_list|,
 name|schema
 argument_list|,
@@ -6544,7 +6624,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"dataDir"
+name|CORE_DATADIR
 argument_list|,
 name|dataDir
 argument_list|,
@@ -6585,7 +6665,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"shard"
+name|CORE_SHARD
 argument_list|,
 name|shard
 argument_list|,
@@ -6621,7 +6701,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"collection"
+name|CORE_COLLECTION
 argument_list|,
 name|collection
 argument_list|,
@@ -6650,7 +6730,7 @@ name|coreAttribs
 operator|.
 name|put
 argument_list|(
-literal|"properties"
+name|CORE_PROPERTIES
 argument_list|,
 name|opt
 argument_list|)
